# prettybird

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  build.sh  format.sh  pyproject.toml  test.bdf
.devcontainer/: devcontainer.json
.github/images/: logo.psd
.github/workflows/: ci.yml
examples/: abc.pbd  abcs.pbd  aco.pbd  pb_roman.pbd  showcase.pbd  temp.pbd
prettybird/: __init__.py  compile.py  function.py  grammar.lark  interpreter.py  prettybird.py  symbol.py
prettybird/formats/: __init__.py  bdf.py  format.py  pcf.py  pcf_defines.py  svg.py
prettybird/utils/: __init__.py  array.py  progressbar.py  string_utils.py
tests/: test_arithmetic.py  test_circle.py  test_primitives.py  test_recursion.py  test_square.py  test_vector.py
