[tool.poetry]
authors = ["Charles Averill <charlesaverill20@gmail.com>"]
description = ""
name = "prettybird"
readme = "README.md"
version = "0.1.0"
include = ["lib/bdf2ttf/bdf2ttf"]

[tool.poetry.dependencies]
lark = "^1.1.3"
pathlib = "^1.0.1"
python = "^3.9"
svgwrite = "^1.4.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
flake8 = "^5.0.4"
mypy = "^0.982"
pytest = "^7.1.3"
pre-commit = "^2.20.0"
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry.scripts]
prettybird = "prettybird.prettybird:main"
